Styling a contact form to be animating yet amazing.

--- a/sass/_functions.scss
+++ b/sass/_functions.scss
@@ -1,10 +1,8 @@
 @function get-image($img) {
-    @return '../images/#{$img}';
-}
-
+  @return '../images/#{$img}';
+};
 
 @function px-to-rem($size) {
-    $value: $size / 16px;
-    @return #{$value}rem;
-}
-
+  $value: $size / 16px;
+  @return #{$value}rem;
+};
