--- a/sass/_landing.scss
+++ b/sass/_landing.scss
@@ -1,3 +1,4 @@
+
 @keyframes intro-content {
     0% { opacity: 0; }
     100% { opacity: 1; }
@@ -8,55 +9,73 @@
     100% { transform: translate(0) scale(1); }
 }
 
+
+
+
+
 #bg {
-  background-image: url(get-image("bg.jpg"));
-  background-size: cover;
-  background-attachment: fixed;
-  background-position: center;
-  height: 100vh;
-  width: 100%;
-  margin: 0;
-  position: fixed;
+    background-image: url(get-image("bg.jpg"));
+    background-size: cover;
+    background-attachment: fixed;
+    background-position: center;
+    height: 100vh;
+    width: 100%;
+    margin: 0;
+    position: fixed;
 }
+
 
 #landing {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  color: white;
-  align-items: center;
-  height: 100vh;
-  position: relative;
-  transition: .5s;
-  z-index: 10;
-  animation-name: intro-content;
-  animation-duration: 1.4s;
-  animation-delay: 0.1s;
-  animation-fill-mode: both;
-
-  h1 {
-    font-size: px-to-rem(48px);
-    margin-bottom: px-to-rem(16px);
-    animation-name: intro-header;
-    animation-duration: 1s;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+    color: white;
+    transition: all .4s;
+    position: relative;
+    z-index: 10;
+    
+    animation-name: intro-content;
+    animation-duration: 1.4s;
     animation-delay: .1s;
-  }
-
-  p {
-    width: 36vw;
-    text-align: center;
-    line-height: 190%;
-  }
-
-  button {
-    color: #425831;
-    background-color: white;
-    padding: .6em 4.2em;
-    border-radius: 4px;
-    margin-top: px-to-rem(14px);
-
-    &:hover {
-      opacity: .6;
+    animation-fill-mode: both;
+    
+    h1 {
+        font-size: px-to-rem(48px);
+        margin-bottom: px-to-rem(16px);
+        
+        animation-name: intro-header;
+        animation-duration: 1s;
+        animation-delay: .1s;
     }
-  }
+    
+    p {
+        width: 36vw;
+        text-align: center;
+        line-height: 190%;
+    }
+    
+    button {
+        color: #425831;
+        font-size: px-to-rem(22px);
+        background-color: white;
+        padding: .6em 4.2em;
+        border-radius: 4px;
+        margin-top: px-to-rem(14px);
+        
+        &:hover {
+            opacity: .4;
+        }
+    }
 }
+
+
+
+
+
+
+
+
+
+
