--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,19 +1,17 @@
-@import 'functions';
+@import "functions.scss";
+@import "reset.scss";
+@import "landing.scss";
+@import "above_fold.scss";
+@import "info_section.scss";
+@import "current_users.scss";
+@import "locations.scss";
+@import "testimonials.scss";
+@import "weekly_deals.scss";
+@import "footer.scss";
 
-@import 'reset';
 
-@import 'landing';
 
-@import 'above_fold';
 
-@import 'info_section';
 
-@import 'current_users';
 
-@import 'locations';
 
-@import 'testimonials';
-
-@import 'weekly_deals';
-
-@import 'footer';
